--- a/app/src/main/res/layout/translate_view_holder.xml
+++ b/app/src/main/res/layout/translate_view_holder.xml
@@ -10,15 +10,14 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardBackgroundColor="#000000"
-        app:cardUseCompatPadding="true"
-        card_view:cardElevation="10dp" >
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:elevation="3dp"
+        card_view:cardCornerRadius="0dp">
 
         <TextView
             android:id="@+id/translate_tv"
-            android:background="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="28sp" />
