--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -1,28 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="14dp"
 
+   >
 
     <TextView
+        android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reminder"
-        android:textSize="25sp"
-        android:id="@+id/header_title"
-        />
+        android:textSize="25sp" />
+
 
     <EditText
+        android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:paddingTop="16dp"
+        android:hint="Input"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:hint="Input"
-        android:id="@+id/edit_text"
-        />
+        android:paddingTop="16dp" />
+
+    <ImageView
+        android:id="@+id/date_cal"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:onClick="showTimePickerDialog" />
+
+
 
 </android.support.v7.widget.CardView>
 
