--- a/app/src/main/res/layout/soundcloud_view_holder.xml
+++ b/app/src/main/res/layout/soundcloud_view_holder.xml
@@ -16,11 +16,22 @@
         android:elevation="3dp"
         card_view:cardCornerRadius="2dp">
 
-        <TextView
-            android:id="@+id/translate_tv"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="28sp" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/soundcloud_iv"
+                android:layout_width="160dp"
+                android:layout_height="160dp" />
+
+            <TextView
+                android:id="@+id/soundcloud_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
