--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    app:cardCornerRadius="14dp"
-
-   >
+    app:cardCornerRadius="14dp">
 
     <TextView
         android:id="@+id/header_title"
@@ -33,7 +31,6 @@
         android:layout_gravity="right"
         android:layout_margin="10dp"
         android:onClick="showTimePickerDialog" />
-
 
 
 </android.support.v7.widget.CardView>
