minor layout changes to activity_home xml

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,7 +45,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/love_music"
+                        android:id="@+id/main_text_backdrop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Google RIGHT Now"
